--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,14 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  http:
+  firebase_core: "0.5.0"
+  firebase_auth: ^0.18.0+1
+  cloud_firestore: ^0.14.0+2
+  # всплывающие уведомления
+  fluttertoast: ^7.0.4
+  # состояние приложения
+  provider: ^4.3.2+2
   flutter:
     sdk: flutter
 
@@ -30,7 +38,6 @@ dependencies:
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
-  http:
   flutter_test:
     sdk: flutter
 
