--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
 
 dependencies:
   http:
+  curved_navigation_bar: ^0.3.3
   firebase_core: "0.5.0"
   firebase_auth: ^0.18.0+1
   cloud_firestore: ^0.14.0+2
