--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   fluttertoast: ^7.0.4
   # состояние приложения
   provider: ^4.3.2+2
+  flutter_form_builder: ^3.13.5
   flutter:
     sdk: flutter
 
